Fix broken stylesheet link, create producciones .html and .css, implement bootstrap carousel

--- a/css/quienes-somos.css
+++ b/css/quienes-somos.css
@@ -1,5 +1,5 @@
 #quienes-somos-text {
-  background-image: url("../images/backgrounds/bg-paper.png");
+  background-image: url("../assets/images/backgrounds/bg-paper.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
